--- a/tictactoe/Gemfile
+++ b/tictactoe/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'devise'
 gem 'foundation-rails'
 gem 'carrierwave', '0.10.0'
+gem 'rmagick'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
 # Use sqlite3 as the database for Active Record
